[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nested-learning-optimizer"
version = "0.1.0"
description = "Deep optimizer with multi-timescale associative memory based on Google's Nested Learning paper"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Kareem Farid", email = "kareemfarid@users.noreply.github.com"}
]
keywords = [
    "deep-learning",
    "optimizer",
    "tensorflow",
    "keras",
    "nested-learning",
    "associative-memory",
    "gradient-descent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tensorflow>=2.10.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/kareemfarid/nested-learning-optimizer"
Documentation = "https://github.com/kareemfarid/nested-learning-optimizer#readme"
Repository = "https://github.com/kareemfarid/nested-learning-optimizer"
Issues = "https://github.com/kareemfarid/nested-learning-optimizer/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

